백엔드: 모집 단계 운영과 개인정보 흐름을 강화함
- 결제·정산·판매 기능을 출시 준비 완료 전까지 서버에서 차단함
- 이메일·소셜 인증과 공개 인증 요청의 보안 경계를 강화함
- 계정 삭제·제3자 제공 동의·미디어 수명주기 운영을 구현함
- 문의 Discord outbox와 gRPC 지원 분석 연결을 추가함
- 단위·통합 회귀 테스트를 보강함